<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.transhealthdemo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_emergency"
        android:name="com.example.transhealthdemo.ui.Emergency.EmergencyFragment"
        android:label="@string/menu_emergency"
        tools:layout="@layout/fragment_emergency" />

    <fragment
        android:id="@+id/nav_pharmacy"
        android:name="com.example.transhealthdemo.ui.pharmacy.PharmacyFragment"
        android:label="@string/menu_pharmacy"
        tools:layout="@layout/fragment_pharmacy" />
    <fragment
        android:id="@+id/nav_consultant"
        android:name="com.example.transhealthdemo.ui.consultant.ConsultantFragment"
        android:label="@string/menu_consultant"
        tools:layout="@layout/fragment_consultant" />

    <fragment
        android:id="@+id/nav_fitness"
        android:name="com.example.transhealthdemo.ui.fitness.FitnessFragment"
        android:label="@string/menu_fitness"
        tools:layout="@layout/fitness_fragment" />

    <fragment
        android:id="@+id/nav_diet"
        android:name="com.example.transhealthdemo.ui.diet.DietFragment"
        android:label="@string/menu_diet"
        tools:layout="@layout/fragment_diet" />
    <fragment
        android:id="@+id/nav_healthplug"
        android:name="com.example.transhealthdemo.ui.healthplug.HealthplugFragment"
        android:label="@string/menu_healthplug"
        tools:layout="@layout/fragment_healthplug" />
    <fragment
        android:id="@+id/nav_signupg"
        android:name="com.example.transhealthdemo.ui.signup.SignupFragment"
        android:label="@string/menu_signup"
        tools:layout="@layout/fragment_signup" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.transhealthdemo.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

</navigation>